crates/red_knot_python_semantic/resources/mdtest/snapshots/not.md_-_Unary_not_-_Not-boolable_types.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: not.md - Unary not - Not-boolable types
mdtest path: crates/red_knot_python_semantic/resources/mdtest/unary/not.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     __bool__ = 3
3 | 
4 | # error: [not-boolable]
5 | not NotBoolable()
```

# Diagnostics

```
error: lint:not-boolable
 --> /src/mdtest_snippet.py:5:1
  |
4 | # error: [not-boolable]
5 | not NotBoolable()
  | ^^^^^^^^^^^^^^^^^ Object of type `NotBoolable` can not be converted to a bool.
  |

```
